# ROS-GenisysIMU

./: 99-genisys-imu.rules  CMakeLists.txt  README.md  package.xml
include/genisys_imu/: genisys_imu.h
launch/: bringup.launch  display.launch
scripts/: visualize.py
src/: genisys_imu.cpp
