<?xml version="1.0"?>
<package format="2">
  <name>genisys_imu</name>
  <version>1.0.0</version>
  <description>The genisys_imu ros package by Anman Technology</description>

  <maintainer email="wuttipat.cho@anman.co.th">Liew Wuttipat</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/genisys_imu</url> -->
  <url type="repository">https://github.com/AnmanTechnology/genisys_imu</url>
  <url type="bugtracker">https://github.com/AnmanTechnology/genisys_imu/issues</url>

  <author email="wuttipat.cho@anman.co.th">Liew Wuttipat</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <exec_depend>rosserial_python</exec_depend>

</package>
